force-app/main/default/objects/KPI_Metric__c/KPI_Metric__c.object-meta.xml
<CustomObject>
    <label>KPI Metric</label>
    <nameField>
        <label>KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>