force-app/main/default/objects/KPI_Metric__c/fields/Baseline_Value__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Value__c</fullName>
    <label>Baseline Value</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>