force-app/main/default/objects/KPI_Metric__c/fields/KPI_Category__c.field-meta.xml
<CustomField>
    <fullName>KPI_Category__c</fullName>
    <label>KPI Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Satisfaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>