force-app/main/default/objects/KPI_Metric__c/fields/KPI_Status__c.field-meta.xml
<CustomField>
    <fullName>KPI_Status__c</fullName>
    <label>KPI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Off Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>