force-app/main/default/objects/KPI_Metric__c/fields/Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Unit__c</fullName>
    <label>Measurement Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Score</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>