force-app/main/default/objects/KPI_Metric__c/fields/Mobility_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Initiative__c</fullName>
    <label>Mobility Initiative</label>
    <referenceTo>Mobility_Initiative__c</referenceTo>
    <relationshipLabel>KPI Metrics</relationshipLabel>
    <relationshipName>KPI_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>