force-app/main/default/objects/KPI_Metric__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KPI_Category__c</columns>
    <columns>KPI_Status__c</columns>
    <columns>Mobility_Initiative__c</columns>
    <columns>Measurement_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>